--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3.0'
 services:
 
-  my_zookeeper:
+  zookeeper:
     image: wurstmeister/zookeeper:3.4.6
     expose:
       - "2181"
     restart: always
-    container_name: my_zookeeper
+    container_name: zookeeper
 
-  my_kafka:
+  kafka:
     image: wurstmeister/kafka:2.12-2.3.0
     depends_on:
-      - my_zookeeper
+      - zookeeper
     ports:
-      - "9094:9094"
+      - "9093:9093"
     expose:
       - "9092"
     environment:
-      KAFKA_CREATE_TOPICS: "sarama_topic:2:1"
+      KAFKA_CREATE_TOPICS: "wallet_operations:2:1"
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     restart: always
-    container_name: my_kafka
+    container_name: kafka
